src/objects/Campaign_Member__c.object
<CustomObject>
    <fields>
        <fullName>Account_information_updates__c</fullName>
        <label>Account information updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_Campaign_Member_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Campaign Member ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Sales_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Sales Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Service_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Service Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Flag__c</fullName>
        <formula>IF(ISPICKVAL(Address__r.TitleOfHonor__c , &apos;To Person&apos;),$Label.To_Person,IF(ISPICKVAL(Address__r.TitleOfHonor__c , &apos;To Company&apos;),$Label.To_Company,&apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The flag to identify if this record can be shared with MBJ</description>
        <label>Allow Data Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_creation_of_DM_requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used if in the response list action is given as create DM Requests</description>
        <label>Auto-creation of DM requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_creation_of_leads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used if in the response list action is given as create leads</description>
        <label>Auto-creation of leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_creation_of_tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-creation of tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount1__c</fullName>
        <label>Bonus Amount1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount2__c</fullName>
        <label>Bonus Amount2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Month1__c</fullName>
        <label>Bonus  Month1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Month2__c</fullName>
        <label>Bonus  Month2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Execution_Type__c</fullName>
        <description>This field is used to capture the campaign execution type</description>
        <label>Campaign Execution Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to refer the related campaign execution record</description>
        <label>Campaign ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Campaign.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Campaign_Executiono</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_ID__c</fullName>
        <description>Autonumber field for Campaign Member.</description>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Campaign Member ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Members (Campaign)</relationshipLabel>
        <relationshipName>Campaign_Members3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>IF(Address__r.Company_Name__c != null, Address__r.Company_Name__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2)</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>PersonAccount</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_date_Lease__c</fullName>
        <label>Contract End date(Lease)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>Contract__r.ContractNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Phone1_1__c</fullName>
        <label>Contract Phone 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Phone2_2__c</fullName>
        <label>Contract Phone 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Phone_1__c</fullName>
        <formula>Contract__r.Contractor_Phone1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Phone 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Responsible_Person__c</fullName>
        <formula>Contract__r.Latest_Sales_Person__c</formula>
        <label>Contract Responsible Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_date_Lease__c</fullName>
        <label>Contract Start date(Lease)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Retail_Task__c</referenceTo>
        <relationshipLabel>Campaign Members (Contract)</relationshipLabel>
        <relationshipName>Campaign_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_Company_Name__c</fullName>
        <formula>Contract__r.Contractor_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Individual_Name__c</fullName>
        <formula>Contract__r.Contractor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Individual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_To_Lead_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert To Lead Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Point_Model__c</fullName>
        <label>Cross Point Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Complete_Address__c</fullName>
        <description>From address look up field will concatenate</description>
        <label>Customer Complete Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <formula>Contact_Id__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Interest_Rate__c</fullName>
        <label>Customer Interest Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Label_Name__c</fullName>
        <description>Calculated by trigger based on address title of honor.</description>
        <label>Customer Label Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Mobile__c</fullName>
        <formula>Contact_Id__r.Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Template__c</fullName>
        <description>Template ID reference copied from Campaign Execution</description>
        <label>DM Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ND_Code__c</fullName>
        <label>Dealer ND Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Payment_loan__c</fullName>
        <label>Deferred Payment(loan)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquency_Flag__c</fullName>
        <label>Delinquency Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Address__c</fullName>
        <description>This field will be populated from Marketing Cloud</description>
        <label>Finance Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Product__c</fullName>
        <label>Finance Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Vehicle__c</fullName>
        <label>Finance Vehicle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fine_Rate__c</fullName>
        <label>Fine Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>Contact_Id__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Registration_Date__c</fullName>
        <formula>Text(Vehicle__r.FirstRegistrationDate__c)</formula>
        <label>First Registration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gaurantor2_Name__c</fullName>
        <label>Gaurantor2 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gaurantor3_Name__c</fullName>
        <label>Gaurantor3 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gaurantor_1_Name__c</fullName>
        <label>Gaurantor 1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indemnity_Amount__c</fullName>
        <label>Indemnity Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Model__c</fullName>
        <label>Interested  Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastInspectionDate__c</fullName>
        <label>LastInspectionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Contact_Id__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastServiceDate__c</fullName>
        <label>LastServiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastWorkDate__c</fullName>
        <label>LastWorkDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Desired_Service__c</fullName>
        <label>Lead Desired Service</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Type__c</fullName>
        <label>Lead Sub Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Loan_Flag__c</fullName>
        <label>Lease/Loan Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Maitenence_Retail_CM_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be Yes for members added by Retailer.</description>
        <label>List Maitenence Retail CM Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBF_Anti_Social_flag__c</fullName>
        <label>MBF Anti Social flag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
		IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;NA&apos;))))</defaultValue>
        <description>For JP users set to JP</description>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Vehicle__r.Class_and_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_amount__c</fullName>
        <label>Monthly Payment amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_amount_with_Tax__c</fullName>
        <label>Monthly Payment amount with Tax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Mercedes_Email__c</fullName>
        <formula>Contact_Id__r.Email3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Mercedes Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Mercedes_ID__c</fullName>
        <description>Will be populated in response file for My M Campaign</description>
        <label>My Mercedes ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextInspectionDate__c</fullName>
        <label>NextInspectionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextServiceDate__c</fullName>
        <label>NextServiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Inspection_Date__c</fullName>
        <formula>Text(Vehicle__r.NextInspectionDate__c)</formula>
        <label>Next Inspection Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_MOT_Date__c</fullName>
        <formula>TEXT(Vehicle_Relationship__r.MOT_Expired_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next MOT Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Payments__c</fullName>
        <label>No of Payments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Prohibit_Flag__c</fullName>
        <label>Offer Prohibit Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participate_Date__c</fullName>
        <description>This field is used to capture the customer&apos;s participating date</description>
        <label>Participate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_End_Date__c</fullName>
        <label>Payment End Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Start_Date__c</fullName>
        <label>Payment Start Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Suspended_Flag__c</fullName>
        <label>Payment Suspended Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members (Preferred Dealer)</relationshipLabel>
        <relationshipName>Campaign_Members3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Timing__c</fullName>
        <label>Purchase Timing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RV_Ballon__c</fullName>
        <label>RV/Ballon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Lease_Extension_Date__c</fullName>
        <label>Re-Lease Extension Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Lease_Prohibit_Flag__c</fullName>
        <label>Re-Lease Prohibit Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_changes__c</fullName>
        <label>Recipient changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <formula>Vehicle_Relationship__r.Registration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <formula>Vehicle_Relationship__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_amount_Lease__c</fullName>
        <label>Residual amount(Lease)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespondedDate__c</fullName>
        <description>This field is used to capture the customer&apos;s response date</description>
        <label>RespondedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Email__c</fullName>
        <label>Response Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_FirstName__c</fullName>
        <label>Response FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_LastName__c</fullName>
        <label>Response LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Campaign_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Campaign ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Retail_Campaign__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Retail_Execution_Campaign</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Task</label>
        <referenceTo>Retail_Task__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <formula>Vehicle_Relationship__r.Sales_Consultant__r.LastName&amp;&apos; &apos;&amp;Vehicle_Relationship__r.Sales_Consultant__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sending_Date__c</fullName>
        <description>Used to capture the date the DM was sent.</description>
        <label>Sending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Representative__c</fullName>
        <formula>Vehicle_Relationship__r.Service_Advisor__r.LastName&amp;&apos; &apos;&amp;Vehicle_Relationship__r.Service_Advisor__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shinpan__c</fullName>
        <label>Shinpan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_CM_Response__c</fullName>
        <description>This field is used to capture source of CM response</description>
        <label>Source of CM Response</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Flag_to_Include__c</fullName>
        <label>Special Flag to Include</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_flag_to_Exclude__c</fullName>
        <label>Special flag to Exclude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <description>This field can be used to capture the status change date</description>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to set the status of the campaign member</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Not Responded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Vehicle_Price_with_tax__c</fullName>
        <label>Total Vehicle Price with tax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Vehicle_Price_without_tax__c</fullName>
        <label>Total Vehicle Price without tax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsVIN__c</fullName>
        <formula>Vehicle__r.UsVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UsVIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Relationship</label>
        <referenceTo>Vehicle_Relationship__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Finance__c</fullName>
        <formula>Contract__r.Contractor_ZipCode1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code Finance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Address__r.ZipCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Campaign Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Campaign Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Members</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>StatusChangingFromExecuted</fullName>
        <active>true</active>
        <description>Camapaign Member Status can be only updated from Executed to Responded, Bounced or No Response</description>
        <errorConditionFormula>AND( 
ISPICKVAL(PRIORVALUE(Status__c) , &quot;Executed&quot;),MD__c = &apos;JP&apos;, $Profile.Name != &apos;IntegrationAPI&apos;, 
OR( 
ISPICKVAL( Status__c , &quot;Removed&quot;), 
ISPICKVAL( Status__c , &quot;Ready&quot;) 
) 
)</errorConditionFormula>
        <errorMessage>Status cannot be changed from &apos;Executed&apos; to &apos;Ready or Removed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>campaign_locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND( MD__c = &apos;JP&apos;, $Profile.Name != &apos;IntegrationAPI&apos;, 
ISPICKVAL( PRIORVALUE( Status__c ) , &quot;Responded&quot;), 
OR( 
ISPICKVAL( Status__c , &quot;Removed&quot;) , 
ISPICKVAL( Status__c , &quot;Ready&quot;) , 
ISPICKVAL( Status__c , &quot;Bounced&quot;) , 
ISPICKVAL( Status__c , &quot;Executed&quot;) , 
ISPICKVAL( Status__c , &quot;Not Responded&quot;) 

) 
)</errorConditionFormula>
        <errorMessage>Status Cannot be Changed When Status is Responded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>retail_campaign_is_locked</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Retail_Campaign_Id__r.Execution_Start_Date__c &gt; TODAY())</errorConditionFormula>
        <errorMessage>Retail Campaign is locked</errorMessage>
    </validationRules>
</CustomObject>